fix med grays for greater contrast ratio

--- a/app/assets/stylesheets/modules/_timeline.styl
+++ b/app/assets/stylesheets/modules/_timeline.styl
@@ -217,7 +217,7 @@ span.week__add-block
     padding 40px 0 30px 0
     font-weight 300
     font-size 24px
-    color $text_med
+    color $text_med_header
 
 .week__week-header .week-index, .week__week-header .input_wrapper > span
   font-family $header-font
